chnged copyright content

--- a/base_boxed_basic_body_image_query.html
+++ b/base_boxed_basic_body_image_query.html
@@ -152,7 +152,7 @@
 			*/
 			#templatePreheader{
 				/*@editable*/ background-color:#F4F4F4;
-				/*@editable*/ border-bottom:1px solid #CCCCCC;
+				/*@editable*/ border-bottom:1px solid blue;
 			}
 
 			/**
@@ -520,7 +520,7 @@
                                         </tr>
                                         <tr>
                                             <td valign="top" class="footerContent" style="padding-top:0;" mc:edit="footer_content01">
-                                                <em>Copyright &copy; *|CURRENT_YEAR|* *|LIST:COMPANY|*, All rights reserved.</em>
+                                                <em>Copyright &copy; 2014 Department of Judaic Studies, University of Oregon, All rights reserved.</em>
                                                 <br />
                                                 *|IFNOT:ARCHIVE_PAGE|* *|LIST:DESCRIPTION|*
                                                 <br />
